working build for AWS

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://atocchi.github.io/Portfolio/",
+  "homepage": ".",
   "name": "resume",
   "version": "0.1.0",
   "private": true,
