--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "@material-ui/core": "^4.9.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
-    "react-scripts": "^3.2.0",
+    "react-scripts": "^3.3.0",
+    "serve": "^11.3.0",
     "styled-components": "^4.4.0"
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "deploy": "serve -s build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
